added notifications + user recommendations/flow fixes